fix css page product, responsive page shop, css scrollbar

--- a/Front-end/src/assets/style/_main.scss
+++ b/Front-end/src/assets/style/_main.scss
@@ -3,40 +3,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	-webkit-tap-highlight-color: transparent;
 }
 body,
 html {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-family: 'Poppins', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-family: 'Poppins', sans-serif;
 }
 
 .scrollTop {
-  position: fixed;
-  bottom: 2%;
-  right: 2%;
-  outline: none;
-  border: none;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: gray;
-  color: white;
+	position: fixed;
+	bottom: 2%;
+	right: 2%;
+	outline: none;
+	border: none;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	background-color: gray;
+	color: white;
 }
 .bags {
-  a {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    padding: 40px 0;
-  }
+	a {
+		display: flex;
+		justify-content: center;
+		text-align: center;
+		padding: 40px 0;
+	}
 }
 .bkg-gray {
-  background-color: #e9e9e9;
+	background-color: #e9e9e9;
 }
 // input::-webkit-outer-spin-button,
 // input::-webkit-inner-spin-button {
@@ -44,8 +44,8 @@ html {
 // }
 
 .disabled-btn {
-  background-color: $gray-color !important;
-  cursor: default;
+	background-color: $gray-color !important;
+	cursor: default;
 }
 
 @keyframes hideToShow {
@@ -54,5 +54,27 @@ html {
 	}
 	to {
 		opacity: 1;
+	}
+}
+
+.client {
+	/* custom scrollbar */
+	::-webkit-scrollbar {
+		width: 20px;
+	}
+
+	::-webkit-scrollbar-track {
+		background-color: transparent;
+	}
+
+	::-webkit-scrollbar-thumb {
+		background-color: #d6dee1;
+		border-radius: 20px;
+		border: 6px solid transparent;
+		background-clip: content-box;
+	}
+
+	::-webkit-scrollbar-thumb:hover {
+		background-color: #a8bbbf;
 	}
 }
