--- a/Front-end/src/components/Product/style.scss
+++ b/Front-end/src/components/Product/style.scss
@@ -87,4 +87,11 @@
 		-webkit-box-shadow: 0px 4px 6px 2px rgba(0, 0, 0, 0.2);
 		-moz-box-shadow: 0px 4px 6px 2px rgba(0, 0, 0, 0.2);
 	}
+ 
+  
+}
+@media screen and (max-width: 600px) {
+  .product-box{
+    height: 500px;
+  }
 }
